# chartered

./: .dockerignore  .env  .gitattributes  .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  Dockerfile-git  Dockerfile-web  README.md  diesel.toml  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.github/imgs/: .gitattributes
.github/workflows/: audit.yml  book.yml  ci.yml  docker-publish.yml  integration-tests.yml  ui.yml
book/: CNAME  book.toml
book/src/: SUMMARY.md  introduction.md
book/src/getting-started/: index.md  installation.md  user-guide.md
book/src/guide/: config-reference.md  index.md
chartered-db/: Cargo.toml  README.md
chartered-db/src/: crates.rs  lib.rs  organisations.rs  permissions.rs  schema.rs  server_private_key.rs  users.rs  uuid.rs
chartered-frontend/: .gitignore  .prettierrc  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
chartered-frontend/src/: app.d.ts  app.html  app.pcss  dark.sass  global.d.ts  index.sass  index.tsx  overscrollColourFixer.ts  useAuth.tsx  util.ts  util.tsx
chartered-frontend/src/components/: ErrorAlert.svelte  FeaturedCrate.svelte  Heatmap.svelte  Icon.svelte  Nav.svelte  NavItem.svelte  RelativeTime.svelte  Spinner.svelte
chartered-frontend/src/pages/: Dashboard.tsx  ErrorPage.tsx  Loading.tsx  Login.tsx  NotFound.tsx  Register.tsx  Search.tsx  SingleCrate.tsx  User.tsx
chartered-frontend/src/pages/crate/: CrateView.tsx  Members.tsx  OrganisationView.tsx
chartered-frontend/src/pages/organisations/: CreateOrganisation.tsx  ListOrganisations.tsx
chartered-frontend/src/pages/sessions/: ListSessions.tsx
chartered-frontend/src/pages/ssh-keys/: AddSshKeys.tsx  ListSshKeys.tsx
chartered-frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts
chartered-frontend/src/routes/(authed)/: +layout.svelte  +page.svelte
chartered-frontend/src/routes/(authed)/crates/[organisation]/: +page.svelte  +page.ts  AddMember.svelte  Member.svelte
chartered-frontend/src/routes/(authed)/crates/[organisation]/[crate]/: +page.svelte  +page.ts  Dependency.svelte  DependencyDefinition.svelte  MemberTab.svelte  RegistryDefinition.svelte  VersionTab.svelte
chartered-frontend/src/routes/(authed)/organisations/: +page.svelte
chartered-frontend/src/routes/(authed)/organisations/create/: +page.svelte  +page.ts
chartered-frontend/src/routes/(authed)/organisations/list/: +page.svelte  +page.ts
chartered-frontend/src/routes/(authed)/search/: +page.svelte  +page.ts
chartered-frontend/src/routes/(authed)/sessions/list/: +page.svelte  +page.ts  DeleteSessionModal.svelte
chartered-frontend/src/routes/(authed)/ssh-keys/: +page.svelte  +page.ts  CreateKeyForm.svelte  DeleteSshKeyModal.svelte  SingleSshKey.svelte
chartered-frontend/src/routes/(authed)/users/[uuid]/: +page.svelte  +page.ts
chartered-frontend/src/routes/(unauthed)/: +layout.svelte
chartered-frontend/src/routes/(unauthed)/auth/login/: +page.svelte  +page.ts
chartered-frontend/src/routes/(unauthed)/auth/register/: +page.svelte  +page.ts
chartered-frontend/src/routes/(unauthed)/login/oauth/: +page.svelte
chartered-frontend/src/sections/: Nav.tsx
chartered-frontend/src/stores/: auth.ts
chartered-frontend/src/types/: crate.ts  featured_crate.ts  organisations.ts  sessions.ts  ssh_keys.ts  user.ts
chartered-frontend/tests/: test.ts
chartered-fs/: Cargo.toml  README.md
chartered-fs/src/: lib.rs
chartered-git/: Cargo.toml  README.md  config-example.toml
chartered-git/src/: config.rs  generators.rs  main.rs  tree.rs
chartered-git/src/command_handlers/: fetch.rs  ls_refs.rs  mod.rs
chartered-git/src/git/: codec.rs  mod.rs  packfile.rs
chartered-git/src/git/packfile/: high_level.rs  low_level.rs  mod.rs
chartered-types/: Cargo.toml  README.md
chartered-types/src/: cargo.rs  lib.rs
chartered-web/: Cargo.toml  README.md  config-example.toml
chartered-web/src/: config.rs  main.rs
chartered-web/src/endpoints/: mod.rs
chartered-web/src/endpoints/cargo_api/: download.rs  mod.rs  owners.rs  publish.rs  yank.rs
chartered-web/src/endpoints/web_api/: crate_info.rs  login.rs  mod.rs  search_users.rs  ssh_key.rs
chartered-web/src/endpoints/web_api/auth/: extend.rs  logout.rs  mod.rs  openid.rs  password.rs
chartered-web/src/endpoints/web_api/crates/: info.rs  members.rs  mod.rs  most_downloaded.rs  recently_created.rs  recently_updated.rs  search.rs
chartered-web/src/endpoints/web_api/organisations/: crud.rs  info.rs  list.rs  members.rs  mod.rs
chartered-web/src/endpoints/web_api/sessions/: delete.rs  list.rs  mod.rs
chartered-web/src/endpoints/web_api/users/: heatmap.rs  info.rs  mod.rs  search.rs
chartered-web/src/middleware/: auth.rs  cargo_auth.rs  ip.rs  logging.rs  mod.rs  rate_limit.rs  web_auth.rs
chartered-web/src/models/: crates.rs
getting-started/: index.html  installation.html  user-guide.html
guide/: config-reference.html  index.html
migrations/2021-08-31-214501_create_crates_table/: down.sql  up.sql
migrations/postgres/2021-08-31-214501_create_crates_table/: down.sql  up.sql
migrations/postgres/2021-11-08-005634_update_sessions_add_uuid/: down.sql  up.sql
migrations/sqlite/2021-11-08-005634_update_sessions_add_uuid/: up.sql
src/: main.rs
src/getting-started/: user-guide.md
src/git/: codec.rs  mod.rs  packfile.rs
src/guide/: config-reference.md
test-using-chartered/: Cargo.toml
test-using-chartered/.cargo/: config.toml
