[package]
name = "chartered-db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chartered-fs = { path = "../chartered-fs" }
chartered-types = { path = "../chartered-types" }

base64 = "0.13"
bitflags = "1"
chrono = "0.4"
diesel = { version = "1", features = ["sqlite", "r2d2", "chrono"] }
displaydoc = "0.2"
hex = "0.4"
http = "0.2"
itertools = "0.10"
option_set = "0.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = "1"
uuid = "0.8"
dotenv = "0.15"
thrussh-keys = "0.21"
