[package]
name = "chartered-fs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
itertools = "*"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "io-util"] }
url = "2"
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }