[package]
name = "chartered-git"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chartered-db = { path = "../chartered-db" }
chartered-types = { path = "../chartered-types" }

anyhow = "1"
arrayvec = "0.7"
async-trait = "0.1"
bytes = "1"
clap = "3.0.0-beta.4"
chrono = "0.4"
const-sha1 = "0.2"
crc = "2"
flate2 = "1.0"
format-bytes = "0.2"
futures = "0.3"
hex = "0.4"
indexmap = "1"
indoc = "1.0"
itoa = "0.4"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.7"
slog-term = "2.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
sha-1 = "0.9"
thrussh = "0.33"
thrussh-keys = "0.21"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
url = "2"
