[package]
name = "chartered-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chartered-db = { path = "../chartered-db" }
chartered-types = { path = "../chartered-types" }

anyhow = "1"
arrayvec = "0.7"
async-trait = "0.1"
bytes = "1"
clap = { version = "3", features = ["cargo", "derive", "std", "suggestions", "color"] }
chrono = "0.4"
const-sha1 = "0.2"
crc = "3"
flate2 = "1.0"
format-bytes = "0.3"
futures = "0.3"
hex = "0.4"
indexmap = "1"
indoc = "1.0"
itoa = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
sha-1 = "0.10"
thrussh = "0.33"
thrussh-keys = "0.21"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

[features]
sqlite = ["chartered-db/sqlite"]
postgres = ["chartered-db/postgres"]
