[package]
name = "chartered-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chartered-db = { path = "../chartered-db" }
chartered-fs = { path = "../chartered-fs" }

axum = "0.2"
bytes = "1"
futures = "0.3"
nom = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "filter"] }
tower-http = { version = "0.1", features = ["trace"] }
