[package]
name = "chartered-web"
authors = ["Jordan Doyle <jordan@doyle.la>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chartered-db = { path = "../chartered-db" }
chartered-fs = { path = "../chartered-fs" }
chartered-types = { path = "../chartered-types" }

axum = { version = "0.5", features = ["headers"] }
base64 = "0.13"
bcrypt = "0.13"
bytes = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3", features = ["cargo", "derive", "std", "suggestions", "color"] }
futures = "0.3"
headers = "0.3"
hex = "0.4"
nom = "7"
nom-bytes = { git = "https://github.com/w4/nom-bytes" }
oauth2 = "4.2"
once_cell = "1.8"
openid = "0.10"
rand = "0.8"
regex = "1.5"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "filter"] }
tower-http = { version = "0.3", features = ["trace", "set-header", "cors"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.2", features = ["serde"] }
